# FEMSON

./: LICENSE  README.md
cpp/: CMakeLists.txt
cpp/include/: fem_objects.hpp  femson.hpp  input.hpp  json_fwd.hpp
cpp/src/: femson.cpp  input.cpp  main.cpp
example/: scoderlis_lo_roof_isotropic_udl.femson
matlab/: femson.m
